Give roster clipboard message z-index fix...
The NJCAA footer logo was obscuring the clipboard message when copying
a player's URL (toward the bottom of the rosters):
- Fix by adding z-index to clipboard message's div.

--- a/assets/scss/3-modules/_roster.scss
+++ b/assets/scss/3-modules/_roster.scss
@@ -59,6 +59,7 @@
   display: none;
   opacity: 0;
   transition: opacity ease-in-out .12s;
+  z-index: 1000;
 }
 
 .roster__cliptext--show {
